crates/keron-lang/tests/corpus/errors/check/field_access_on_non_struct.keron
val n: Int = 1
val z: Int = n.x
